Fix messagelist collapsed message font size

--- a/Libadwaita/styles/messagelist.less
+++ b/Libadwaita/styles/messagelist.less
@@ -251,6 +251,8 @@
 	}
 
 	.message-item-area {
+		font-size: @text_size;
+
 		.collapsed-from {
 			color: @text_color_dim;
 		}
